feat(technicians): finished developing technician apis
